Fix: Alter name routes projects
